--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <div id="f1-results-tab" class="f1-subtab-content hidden">
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
                             <div id="card-results" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
-                                <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
+                                <div class="bg-black bg-opacity-90 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">Past Races</h3>
                                     <!-- Race Tabs Navigation -->
                                     <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 border-b-2 border-gray-700 pb-4 overflow-x-auto mt-2">
