--- a/index.html
+++ b/index.html
@@ -291,6 +291,10 @@
                                             <p><strong>Bahrain Grand Prix</strong></p>
                                             <img src="images/BahrainResult.png" alt="Bahrain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="race-bahrain" class="race-content hidden">
+                                            <p><strong>Saudi Arabia Grand Prix</strong></p>
+                                            <img src="images/SaudiArabiaResult.png" alt="Saudi Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
