--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-china')">Chinese GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-japan')">Japanese GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-bahrain')">Bahrain GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-saudi arabia')">Saudi Arabia GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -291,7 +292,7 @@
                                             <p><strong>Bahrain Grand Prix</strong></p>
                                             <img src="images/BahrainResult.png" alt="Bahrain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-bahrain" class="race-content hidden">
+                                        <div id="race-saudi arabia" class="race-content hidden">
                                             <p><strong>Saudi Arabia Grand Prix</strong></p>
                                             <img src="images/SaudiArabiaResult.png" alt="Saudi Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
