--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                                             </nav>
                                             <!-- Subtab Content -->
                                             <div id="australia-track-data" class="race-subtab-content">
-                                                <img src="images/placeholder.png" alt="Track Data Placeholder" class="w-full max-w-md h-auto mb-4">
+                                                <img src="images/AustraliaTrack.png" alt="Australia Track Data" class="w-full max-w-md h-auto mb-4">
                                             </div>
                                             <div id="australia-practice-1" class="race-subtab-content hidden">
                                                 <img src="images/placeholder.png" alt="Practice 1 Placeholder" class="w-full max-w-md h-auto mb-4">
