--- a/index.html
+++ b/index.html
@@ -297,6 +297,10 @@
                                             <p><strong>Saudi Arabia Grand Prix</strong></p>
                                             <img src="images/SaudiArabiaResult.png" alt="Saudi Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="race-miami" class="race-content hidden">
+                                            <p><strong>Miami Grand Prix</strong></p>
+                                            <img src="images/MiamiResult.png" alt="Miami Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
