--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                             <p id="ultimate-condition">Condition: Loading...</p>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
                             <ul id="ultimate-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+                            <img src="images/CStandings.png" alt="Ultimate event" class="w-full max-w-md h-auto">
                         </div>
                     </div>
                     <div id="card-rock" class="weather-card bg-[url('images/Racing3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
