--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                             <h4 id="zwartkops-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
                             <p id="zwartkops-temp">Temp: Loading...</p>
                             <p id="zwartkops-condition">Condition: Loading...</p>
+                            <img src="images/Zwartkops.png" alt="Zwartkops event" class="w-full max-w-md h-auto">
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
                             <ul id="zwartkops-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                         </div>
