--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <h4 id="rock-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
                             <p id="rock-temp">Temp: Loading...</p>
                             <p id="rock-condition">Condition: Loading...</p>
-                            <img src="images/Rock.png" alt="The Rock event" class="w-full max-w-md h-auto">
+                            <img src="images/TheRock.png" alt="The Rock event" class="w-full max-w-md h-auto">
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
                             <ul id="rock-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>                            
                         </div>
