--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                                         </div>
                                         <div id="race-emilia" class="race-content hidden">
                                             <p><strong>Emilia Romagna Grand Prix</strong></p>
-                                            <img src="images/EmiliaResult.jpg" alt="Emilia Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                            <img src="images/EmiliaResult.png" alt="Emilia Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
