--- a/index.html
+++ b/index.html
@@ -317,6 +317,10 @@
                                             <p><strong>Emilia Romagna Grand Prix</strong></p>
                                             <img src="images/EmiliaResult.png" alt="Emilia Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <video width="640" height="360" controls>
+                                            <source src="imges/EmiliaQualy.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
                                     </div>
                                 </div>
                             </div>
