--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                             <img src="images/EmiliaResult.png" alt="Emilia Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                         <video width="640" height="360" controls>
-                                            <source src="imges/EmiliaQualy.mp4" type="video/mp4">
+                                            <source src="images/EmiliaQualy.mp4" type="video/mp4">
                                             Your browser does not support the video tag.
                                         </video>
                                     </div>
