--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-miami-sprint')">Miami GP Sprint</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-miami')">Miami GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-emilia')">Emilia GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-monaco')">Monaco GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -320,6 +321,10 @@
                                             <source src="images/EmiliaQualy.mp4" type="video/mp4">
                                             Your browser does not support the video tag.
                                         </video>
+                                        </div>
+                                        <div id="race-monaco" class="race-content hidden">
+                                            <p><strong>Monaco Grand Prix</strong></p>
+                                            <img src="images/MonacoResult.png" alt="Monaco Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
