--- a/index.html
+++ b/index.html
@@ -332,6 +332,75 @@
                             </div>
                         </div>
                     </div>
+                        <div id="f1-facts-tab" class="f1-subtab-content hidden">
+                        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
+                            <div id="card-facts" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                                <div class="bg-black bg-opacity-90 p-2 rounded">
+                                    <h3 class="text-base sm:text-lg font-bold">Past Races</h3>
+                                    <!-- Race Tabs Navigation -->
+                                    <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 border-b-2 border-gray-700 pb-4 overflow-x-auto mt-2">
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-australia')">Australian GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-china-sprint')">Chinese GP Sprint</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-china')">Chinese GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-japan')">Japanese GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-bahrain')">Bahrain GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-saudi arabia')">Saudi Arabia GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-miami-sprint')">Miami GP Sprint</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-miami')">Miami GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-emilia')">Emilia GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-monaco')">Monaco GP</button>
+                                    </nav>
+                                    <!-- Race Results Content -->
+                                    <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
+                                        <div id="race-australia" class="race-content">
+                                            <p><strong>Australian Grand Prix</strong></p>
+                                            <img src="images/AustraliaResult.png" alt="Australian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="race-china-sprint" class="race-content hidden">
+                                            <p><strong>Chinese Grand Prix Sprint</strong></p>
+                                            <img src="images/ChinaSprintResult.png" alt="Chinese Grand Prix Sprint Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="race-china" class="race-content hidden">
+                                            <p><strong>Chinese Grand Prix</strong></p>
+                                            <img src="images/ChinaResult.png" alt="Chinese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="race-japan" class="race-content hidden">
+                                            <p><strong>Japanese Grand Prix</strong></p>
+                                            <img src="images/JapanResult.png" alt="Japanese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="race-bahrain" class="race-content hidden">
+                                            <p><strong>Bahrain Grand Prix</strong></p>
+                                            <img src="images/BahrainResult.png" alt="Bahrain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="race-saudi arabia" class="race-content hidden">
+                                            <p><strong>Saudi Arabia Grand Prix</strong></p>
+                                            <img src="images/SaudiArabiaResult.png" alt="Saudi Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="race-miami-sprint" class="race-content hidden">
+                                            <p><strong>Miami Sprint Grand Prix</strong></p>
+                                            <img src="images/MiamiSprintResult.png" alt="Miami Sprint Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="race-miami" class="race-content hidden">
+                                            <p><strong>Miami Grand Prix</strong></p>
+                                            <img src="images/MiamiResult.png" alt="Miami Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="race-emilia" class="race-content hidden">
+                                            <p><strong>Emilia Romagna Grand Prix</strong></p>
+                                            <img src="images/EmiliaResult.png" alt="Emilia Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        <video width="640" height="360" controls>
+                                            <source src="images/EmiliaQualy.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                        </div>
+                                        <div id="race-monaco" class="race-content hidden">
+                                            <p><strong>Monaco Grand Prix</strong></p>
+                                            <img src="images/MonacoResult.png" alt="Monaco Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section id="sport" class="tab-content hidden">
