--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
                             <div id="card-facts" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                                 <div class="bg-black bg-opacity-90 p-2 rounded">
-                                    <h3 class="text-base sm:text-lg font-bold">Past Races</h3>
+                                    <h3 class="text-base sm:text-lg font-bold">Interesting facts during Past Races</h3>
                                     <!-- Race Tabs Navigation -->
                                     <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 border-b-2 border-gray-700 pb-4 overflow-x-auto mt-2">
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-australia')">Australian GP</button>
