--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
-                                        <div id="race-australia" class="race-content">
+                                        <div id="race-australia" class="facts-content">
                                             <p><strong>Australian Grand Prix</strong></p>
                                             <img src="images/AustraliaResult.png" alt="Australian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
