--- a/index.html
+++ b/index.html
@@ -350,41 +350,41 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-emilia')">Emilia GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-monaco')">Monaco GP</button>
                                     </nav>
-                                    <!-- Race Results Content -->
+                                    <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
                                         <div id="race-australia" class="facts-content">
                                             <p><strong>Australian Grand Prix</strong></p>
                                             <img src="images/AustraliaResult.png" alt="Australian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-china-sprint" class="race-content hidden">
+                                        <div id="race-china-sprint" class="facts-content hidden">
                                             <p><strong>Chinese Grand Prix Sprint</strong></p>
                                             <img src="images/ChinaSprintResult.png" alt="Chinese Grand Prix Sprint Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-china" class="race-content hidden">
+                                        <div id="race-china" class="facts-content hidden">
                                             <p><strong>Chinese Grand Prix</strong></p>
                                             <img src="images/ChinaResult.png" alt="Chinese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-japan" class="race-content hidden">
+                                        <div id="race-japan" class="facts-content hidden">
                                             <p><strong>Japanese Grand Prix</strong></p>
                                             <img src="images/JapanResult.png" alt="Japanese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-bahrain" class="race-content hidden">
+                                        <div id="race-bahrain" class="facts-content hidden">
                                             <p><strong>Bahrain Grand Prix</strong></p>
                                             <img src="images/BahrainResult.png" alt="Bahrain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-saudi arabia" class="race-content hidden">
+                                        <div id="race-saudi arabia" class="facts-content hidden">
                                             <p><strong>Saudi Arabia Grand Prix</strong></p>
                                             <img src="images/SaudiArabiaResult.png" alt="Saudi Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-miami-sprint" class="race-content hidden">
+                                        <div id="race-miami-sprint" class="facts-content hidden">
                                             <p><strong>Miami Sprint Grand Prix</strong></p>
                                             <img src="images/MiamiSprintResult.png" alt="Miami Sprint Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-miami" class="race-content hidden">
+                                        <div id="race-miami" class="facts-content hidden">
                                             <p><strong>Miami Grand Prix</strong></p>
                                             <img src="images/MiamiResult.png" alt="Miami Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-emilia" class="race-content hidden">
+                                        <div id="race-emilia" class="facts-content hidden">
                                             <p><strong>Emilia Romagna Grand Prix</strong></p>
                                             <img src="images/EmiliaResult.png" alt="Emilia Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         <video width="640" height="360" controls>
@@ -392,7 +392,7 @@
                                             Your browser does not support the video tag.
                                         </video>
                                         </div>
-                                        <div id="race-monaco" class="race-content hidden">
+                                        <div id="race-monaco" class="facts-content hidden">
                                             <p><strong>Monaco Grand Prix</strong></p>
                                             <img src="images/MonacoResult.png" alt="Monaco Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
