--- a/index.html
+++ b/index.html
@@ -352,11 +352,11 @@
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
-                                        <div id="race-australia" class="facts-content">
+                                        <div id="facts-australia" class="facts-content">
                                             <p><strong>Australian Grand Prix</strong></p>
                                             <img src="images/AustraliaResult.png" alt="Australian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-china-sprint" class="facts-content hidden">
+                                        <div id="facts-china-sprint" class="facts-content hidden">
                                             <p><strong>Chinese Grand Prix Sprint</strong></p>
                                             <img src="images/ChinaSprintResult.png" alt="Chinese Grand Prix Sprint Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
